<resources>
    <string name="app_name">LEDController</string>
    <string name="button_connect">Connect</string>
    <string name="button_edit">EDIT</string>
    <string name="button_new">NEW</string>
    <string name="button_delete">DELETE</string>
    <string name="textView_selected">Select Pattern</string>
    <string name="button_done">DONE</string>
    <string name="editText_name">Name</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_set">SET</string>
    <string name="textView_name">Name:</string>
    <string name="textView_length">Length: \n0 - 255</string>
    <string name="textView_speed">Speed: \n0 - 255</string>
    <string name="textView_speedFade">Speed: \n1 - 255</string>
    <string name="textView_fade">Fade:\n0 - 255</string>
    <string name="settings_textview">Settings</string>
    <string name="textView_brightness">Brightness:\n (0 - 255)</string>
    <string name="button_apply">Apply</string>

    <string-array name="types_array">
        <item>Pick A Pattern</item>
        <item>Simple</item>
        <item>Fade</item>
        <item>Banner</item>
        <item>Flow</item>
        <item>Mix</item>
    </string-array>
</resources>
